# unfoc

./: .gitignore  .hgignore  LICENSE  MANIFEST.in  README.md  parse_channels.py  pyk1.py  pyproject.toml  radbxds.py  run_unfoc.py  run_unfoc_1m.py  test  test_HiCARS1  test_HiCARS2  test_MARFA  test_unfoc.py  unfoc.py  unfocb.py  unfocused_radar_processer.py
doc/: module_design.md  unfoc.dot
docs/: requirements.txt
docs/dataflow/: Makefile  unfoc.dot  unfoc_old.dot
docs/source/: conf.py  index.rst  installation.rst  modules.rst  package_design.rst  usage_guide.rst
docs/source/_autosummary/: unfoc.burst_noise.filter.rst  unfoc.burst_noise.rst  unfoc.chirp.rst  unfoc.dechirp.rst  unfoc.filter.rst  unfoc.parse_channels.rst  unfoc.read.rst  unfoc.trace.rst  unfoc.write.rst
docs/source/_templates/autosummary/: class_top_level.rst  function_top_level.rst
examples/: export_radnh_hdf5.py
regress/: run_coverage.sh  run_regress.sh  test_HiCARS1  test_HiCARS2  test_MARFA  test_parse_channels.py  test_radbxds.py  test_read.py  test_unfoc1.py
regress/test_lists/: tests_level0.txt  tests_level1.txt
src/: run_unfoc.py  run_unfoc_1m.py
src/unfoc/: __init__.py  dechirp.py  filter.py  parse_channels.py  read.py  trace.py  write.py
src/unfoc/burst_noise/: __init__.py  burst_noise_PPT_MKB2o_Y01e_trace932_samp2985.npz  filter.py
tests/: .coveragerc  find_radnh_bxds.sh  mismatched.txt  run_coverage.sh  run_regress.sh  sitecustomize.py  test_multichannel_rect.py  test_parse_channels.py  test_read.py  test_unfoc1.py
tests/test_lists/: tests_level0.txt  tests_level1.txt  tests_radjh1.txt
unfoc/: dechirp.py  filter.py  parse_channels.py  read.py  write.py
